# bbqmi

./: .gitignore  README.md  pyproject.toml  requirements.runpod.txt  requirements.txt
configs/: default.yaml
scripts/: 01_prepare_dataset.py  02_extract_hidden_states.py  03_probe_group_signal.py  ablate_heads.py  analyze_backfire.py  analyze_cross_identity.py  analyze_decomposition.py  analyze_fragmentation.py  analyze_gi_deep.py  analyze_representations.py  behavioral_pilot.py  causal_analysis.py  debug_hook.py  diagnose_pilot.py  download_models.py  extract_activations.py  intervene_and_sanity.py  prepare_stimuli.py  run_pipeline.py  test_identity_detection.py
src/bbqmi/: __init__.py  dates.py  io.py  model_introspection.py  run_paths.py  schema.py  text_model.py
